tests/test-files/parse-match.txt
================================================================================
100 Malformed match expression
================================================================================

(package test-package)

(define f (match))

--------------------------------------------------------------------------------

error: Malformed match expression
  --> test:3:16
   |
 3 |  (define f (match))
   |                  ^ expected expression

================================================================================
101 Malformed match branch
================================================================================

(package test-package)

(define f
  (match x
    (y)))

--------------------------------------------------------------------------------

error: Malformed match branch
  --> test:5:6
   |
 5 |      (y)))
   |        ^ expected body

================================================================================
102 Malformed match branch
================================================================================

(package test-package)

(define f
  (match x
    5))

--------------------------------------------------------------------------------

error: Malformed match branch
  --> test:5:4
   |
 5 |      5))
   |      ^ expected list

================================================================================
103 Malformed match branch
================================================================================

(package test-package)

(define f
  (match x
    (x y . z)))

--------------------------------------------------------------------------------

error: Malformed match branch
  --> test:5:4
   |
 5 |      (x y . z)))
   |      ^^^^^^^^^ unexpected dotted list
